--- a/countdown.html
+++ b/countdown.html
@@ -146,12 +146,12 @@
 
         /* Countdown Timer */
         .countdown-container {
-            background: rgba(255, 255, 255, 0.96);
+            background: linear-gradient(160deg, rgba(10, 13, 28, 0.9), rgba(16, 23, 46, 0.9));
             border-radius: 28px;
             padding: 44px 34px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.18);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.35);
             margin: 0 auto 42px;
-            border: 2px solid rgba(185, 198, 255, 0.28);
+            border: 1px solid rgba(147, 184, 255, 0.25);
             position: relative;
             overflow: hidden;
             animation: slideUp 0.8s ease 0.2s both;
@@ -178,12 +178,12 @@
             left: 0;
             right: 0;
             height: 6px;
-            background: linear-gradient(90deg, #ffb3e6, #b3c4ff, #8ee2ff);
+            background: linear-gradient(90deg, #ff7ec7, #9fb6ff, #6de2ff);
         }
 
         .countdown-label {
             font-size: 1.15rem;
-            color: #5b4a6f;
+            color: #e6dcff;
             font-weight: 700;
             margin-bottom: 30px;
             letter-spacing: 1.4px;
@@ -198,10 +198,10 @@
         }
 
         .time-unit {
-            background: linear-gradient(160deg, rgba(255, 182, 229, 0.14), rgba(179, 200, 255, 0.16));
+            background: linear-gradient(160deg, rgba(255, 182, 229, 0.08), rgba(179, 200, 255, 0.1));
             border-radius: 18px;
             padding: 22px 14px;
-            border: 2px solid rgba(185, 198, 255, 0.32);
+            border: 1px solid rgba(185, 198, 255, 0.3);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -233,7 +233,7 @@
         .time-value {
             font-size: 2.6rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #ff95d6, #b7c4ff);
+            background: linear-gradient(135deg, #ffd4ff, #c8d9ff);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -244,7 +244,7 @@
 
         .time-label {
             font-size: 0.85rem;
-            color: #6a6a85;
+            color: #c6cbef;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -252,11 +252,11 @@
 
         .current-time {
             font-size: 1.1rem;
-            color: #b388ff;
+            color: #d0c8ff;
             font-weight: 600;
             margin-top: 20px;
             padding-top: 20px;
-            border-top: 2px solid rgba(255, 155, 214, 0.2);
+            border-top: 2px solid rgba(255, 155, 214, 0.18);
             font-family: 'Poppins', sans-serif;
         }
 
